src/objects/EUM_Web__c.object
<CustomObject>
    <fields>
        <fullName>Allow_overages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow overages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_EUM_Detail__c</fullName>
        <label>License EUM Detail</label>
        <referenceTo>License_EUM_Details__c</referenceTo>
        <relationshipLabel>EUM Web</relationshipLabel>
        <relationshipName>EUM_Web</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>LITE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>EUM Web</label>
    <nameField>
        <label>License EUM Web Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EUM Web</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>